--- a/package.json
+++ b/package.json
@@ -17,10 +17,8 @@
   },
   "homepage": "https://github.com/JustinMarbutt/stock_driver#readme",
   "devDependencies": {
+    "css-minify": "^2.0.0",
     "uglifyjs": "^2.4.11",
     "uglifyjs-folder": "^3.1.4"
-  },
-  "dependencies": {
-    "css-minify": "^2.0.0"
   }
 }
