--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "stock trading game",
   "main": "index.js",
   "scripts": {
-    "build": "css-minify -d assets/styles -o bin/assets/styles && uglifyjs index.js -c -m -o bin/assets/js/script.js && uglifyjs-folder assets/js -c -m -o bin/assets/js/library.js && exit 1"
+    "install-cli": "npm install css-minify -g && npm install uglify-js -g && npm install uglifyjs-folder -g",
+    "build": "css-minify -d assets/styles -o bin/assets/styles && uglifyjs index.js -c -m -o bin/assets/js/script.js && uglifyjs-folder assets/js -c -m -o bin/assets/js/library.js"
   },
   "repository": {
     "type": "git",
@@ -15,10 +16,5 @@
   "bugs": {
     "url": "https://github.com/JustinMarbutt/stock_driver/issues"
   },
-  "homepage": "https://github.com/JustinMarbutt/stock_driver#readme",
-  "devDependencies": {
-    "css-minify": "^2.0.0",
-    "uglifyjs": "^2.4.11",
-    "uglifyjs-folder": "^3.1.4"
-  }
+  "homepage": "https://github.com/JustinMarbutt/stock_driver#readme"
 }
