--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "stock_driver",
-  "version": "0.0.1",
-  "description": "stock trading game",
+  "version": "0.0.2",
+  "description": "a fake market trading game",
   "main": "bin/index.html",
   "scripts": {
     "setup-bin": "cd bin && npm install",
