--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
   },
   "homepage": "https://github.com/JustinMarbutt/stock_driver#readme",
   "devDependencies": {
-    "node-sass": "^8.0.0",
-    "uglify-js": "^3.17.4",
-    "uglifyjs-folder": "^3.1.4"
+    "node-sass": "8.0.0",
+    "uglify-js": "3.17.4",
+    "uglifyjs-folder": "3.1.4"
   }
 }
