--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "bin/index.html",
   "scripts": {
     "setup-bin": "cd bin && npm install",
-    "build-sass": "node-sass assets/styles/ -o bin/assets/styles/",
-    "build-js": "webpack",
-    "build": "npm run build-js && npm run build-sass",
+    "build": "webpack",
     "setup": "npm install && npm run setup-bin",
     "build-dev": "npm run build && open bin/index.html"
   },
@@ -22,7 +20,11 @@
   },
   "homepage": "https://github.com/JustinMarbutt/stock_driver#readme",
   "devDependencies": {
+    "css-loader": "^6.7.3",
     "node-sass": "8.0.0",
+    "sass": "^1.57.1",
+    "sass-loader": "^13.2.0",
+    "style-loader": "^3.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
   }
