--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/JustinMarbutt/stock_driver#readme",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "html-webpack-plugin": "^5.5.0",
     "node-sass": "8.0.0",
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
