--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 .DS_Store
 **/.DS_Store
 node_modules
-/bin/node_modules
-/bin/index.html
-/bin/assets/js/*.js
-/bin/assets/styles/*.css
-!bin/assets/styles/
+bin/node_modules
+bin/index.html
+bin/bundle.js
