--- a/bin/package.json
+++ b/bin/package.json
@@ -4,7 +4,6 @@
     "bootstrap": "^4.1.3",
     "bootstrap-icons": "^1.10.2",
     "chart.js": "^3.8.0",
-    "jquery": "^3.6.2",
-    "moment": "^2.29.4"
+    "jquery": "^3.6.2"
   }
 }
