--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "moment": "^2.29.4"
+    "moment": "^2.29.4",
+    "chart.js": "^3.8.0"
   }
 }
