--- a/package.json
+++ b/package.json
@@ -29,7 +29,11 @@
     "webpack-cli": "^5.0.1"
   },
   "dependencies": {
-    "moment": "^2.29.4",
-    "chart.js": "^3.8.0"
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^4.1.3",
+    "bootstrap-icons": "^1.10.2",
+    "chart.js": "^3.8.0",
+    "jquery": "^3.6.2",
+    "moment": "^2.29.4"
   }
 }
